--- a/package.json
+++ b/package.json
@@ -17,13 +17,16 @@
     "axios": "0.18.1",
     "core-js": "3.6.5",
     "element-ui": "2.13.2",
+    "file-saver": "^2.0.2",
     "js-cookie": "2.2.0",
     "normalize.css": "7.0.0",
     "nprogress": "0.2.0",
     "path-to-regexp": "2.4.0",
+    "sortablejs": "^1.10.2",
     "vue": "2.6.10",
     "vue-router": "3.0.6",
-    "vuex": "3.1.0"
+    "vuex": "3.1.0",
+    "xlsx": "^0.16.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "4.4.4",
